Bug 10195 - nd_opt_home_agent_info.nd_opt_home_agent_info_preference declared as an int16_t instead of uint16_t
Summary: nd_opt_home_agent_info.nd_opt_home_agent_info_preference declared as an int16...
Status: RESOLVED FIXED
Alias: None
Product: glibc
Classification: Unclassified
Component: libc (show other bugs)
Version: 2.10
: P2 normal
Target Milestone: ---
Assignee: Ulrich Drepper
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-05-23 23:49 UTC by Arnaud Ebalard
Modified: 2014-07-01 20:19 UTC (History)
1 user (show)

See Also:
Host:
Target:
Build:
Last reconfirmed:
fweimer: security-


Attachments
Correct nd_opt_home_agent_info_preference field. Make it an uint16_t. Patch against freshglibc-2_10-branch (415 bytes, patch)
2009-05-23 23:57 UTC, Arnaud Ebalard
Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Arnaud Ebalard 2009-05-23 23:49:13 UTC
netinet/icmpv6.h implements the structure associated with MIPv6 Home Agent
Information Option (struct nd_opt_home_agent_info). It was added by commit 959eb65d.

The option is defined in section 7.4 of RFC 3775. It contains a "Home Agent
Preference" field defined as a "16-bit unsigned integer".

The associated field (nd_opt_home_agent_info_preference) in
nd_opt_homeagent_info is defined as an int16_t.

It should be a uint16_t.

Cheers,

a+

ps: I checked the sources of RADVD (Linux Router Advertisement daemon). It
redefines a structure for the option. The field is an unsigned. Same thing in
UMIP (Linux Mobile IPv6 daemon).
Comment 1 Arnaud Ebalard 2009-05-23 23:57:45 UTC
Created attachment 3961 [details]
Correct nd_opt_home_agent_info_preference field. Make it an uint16_t. Patch against freshglibc-2_10-branch
Comment 2 Ulrich Drepper 2009-06-16 03:34:27 UTC
Fix in git.