Force packing for packet structures.

In glibc, structures are not packed. This is usually ok but on some
architectures (ARM for instance), this creates issues when checking
the expected length of received packets. For instance, sizeof
returns a size of 4 bytes on ARM architectures for such a structure:

struct nd_opt_hdr      /* Neighbor discovery option header */
  {
    uint8_t  nd_opt_type;
    uint8_t  nd_opt_len;        /* in units of 8 octets */
    /* followed by option specific data */
  };

The patch below basically includes a modified version of netinet/icmp6.h
which adds a __attribute__ ((packed)); to that structure to force packing
in all cases.

In a perfect world, I would do that inclusion only on architectures that
have that issue using some autoconf magic.

Side note: the original netinet/icmp6.h has also been modified to correct
           http://sourceware.org/bugzilla/show_bug.cgi?id=10195. It has
           no impact for UMIP as its own structure.

by Arnaud Ebalard <arno@natisbad.org> -- Under GPLv2.